// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`testResponseContentType should add test for content type 1`] = `
[
  "// Validate if response header has matching content-type
pm.test("[GET]::/crm/companies/:id - Content-Type is application/json", function () {
   pm.expect(pm.response.headers.get("Content-Type")).to.include("application/json");
});
",
]
`;

exports[`testResponseContentType should add test with separator symbol for content type 1`] = `
[
  "// Validate if response header has matching content-type
pm.test("[GET]==/crm/companies/:id - Content-Type is application/json", function () {
   pm.expect(pm.response.headers.get("Content-Type")).to.include("application/json");
});
",
]
`;
